# dacos

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/dacos/: .gitignore  __init__.py  api.py  config.py  contracts.py  main.py  protocols.py  research.py
src/dacos/builder/: __init__.py  etl.py
src/dacos/core/: __init__.py  alignment.py  ingestion.py  linag.py  validation.py
src/dacos/laws/: __init__.py  mean_reversion.py  volatility.py
src/dacos/paradigms/: __init__.py
src/dacos/paradigms/stat_arb/: __init__.py  engines.py  tactics.py
src/dacos/paradigms/tsm/: __init__.py  engine.py  tactics.py
src/dacos/utils/: __init__.py  results.py
tests/: test_e2e.py  test_stress.py
tests/builder/: test_etl.py
tests/core/: test_alignment.py  test_ingestion.py  test_linag.py  test_validation.py
tests/e2e/: test_api_e2e.py  test_stress.py
tests/laws/: test_mean_reversion.py  test_volatility.py
tests/paradigms/: test_engine.py  test_sa_engine.py  test_sa_tactics.py  test_tsm_engine.py  test_tsm_tactics.py
