[project]
name = "dacos"
version = "0.1.2"
description = "Deterministic Data Orchestrator for Quantitative Trading"
authors = [{ name = "Imam Putra", email = "a.i.syahputra415@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0.0",
    "numpy>=1.26.0",
    "statsmodels>=0.14.0",
    "pyarrow>=14.0.0",
    "scipy>=1.11.0",
    "numba>=0.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dacos"]

[tool.mypy]
strict = true
disallow_any_unimported = true
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
warn_unreachable = true

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".git", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N", "B", "C4", "ARG", "PGH"]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "stress: Mark a test as a stress test (handles large datasets)",
    "performance: marks tests as heavy performance/stress tests (deselect with '-m \"not performance\"')"
]
